gitops/platform-apps/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
  labels:
    app.kubernetes.io/name: copyparty
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: copyparty
  ports:
    - name: http
      port: 80
      targetPort: http
